# khi-dl

./: .gitignore  .pre-commit-config.yaml  README.md  example_sources.txt  makefile  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
khi_dl/: main.py
tests/: conftest.py  test_khialbum.py  test_khitrack.py
