[tool.poetry]
name = "khi-dl"
version = "0.1.0"
description = ""
authors = ["J.J. Trigueiros <jjtrigueiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
bs4 = "^0.0.2"
loguru = "^0.7.2"
yarl = "^1.9.4"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
